# publication-weiner-variation

./: .gitignore  .jupyter_ystore.db  .pytask.sqlite3  Pipfile  README.md  hatch.toml  initialize.py  pyproject.toml  sim_nominal_results.csv
.pytask/: file_hashes.json  pytask.sqlite3
weiner_variation/: config.py  latexmkrc  refs.bib  symbols.sty  symbols.toml  task_latex.py  task_symbols.py  weiner_variation.tex
weiner_variation/data/: config.py  cp_data.csv  duo_pauses.csv  duo_pauses_dist.csv  input_dist.csv  pauses.csv  sim_durations_results.csv  sim_elastic_results.csv  sim_input_results.csv  sim_nominal_results.csv  task_analyse_pauses.py  task_convert_iba_export.py  task_extract_pass_data.py
weiner_variation/data/iba_export/: 2022-10-20_01.txt  2022-10-20_02.txt  2022-10-20_03.txt  2022-10-20_07.txt  2022-10-20_10.txt  2022-10-20_11.txt  2022-10-20_12.txt  2022-10-20_13.txt
weiner_variation/data/passes/: 2022-09-26_01.csv  2022-09-26_02.csv  2022-09-26_03.csv  2022-09-26_04.csv  2022-10-06_01.csv  2022-10-06_02.csv  2022-10-06_03.csv  2022-10-06_04.csv  2022-10-07_01.csv  2022-10-07_02.csv  2022-10-07_03.csv  2022-10-07_04.csv  2022-10-20_01.csv  2022-10-20_02.csv  2022-10-20_03.csv  2022-10-20_04.csv  2022-10-20_05.csv  2022-10-20_06.csv  2022-10-20_07.csv  2022-10-20_08.csv  2022-10-20_09.csv  2022-10-20_10.csv  2022-10-20_11.csv  2022-10-20_12.csv  2022-10-20_13.csv  2022-10-20_14.csv  2022-10-20_15.csv  2022-10-20_16.csv  2022-10-20_17.csv
weiner_variation/data/raw_data/: 2022-10-20_01.csv  (+7 more)
weiner_variation/img/: .gitignore  task_chart_mc_principle.py  task_flow_chart_mc_principle.py  task_plot_histogram_pauses.py  task_plot_pass_sequence.py  task_plot_sim_results.py  task_plot_timeline_pass_finding.py
weiner_variation/sections/: introduction.tex  methods.tex  results.tex
weiner_variation/sim/: .gitignore  config.py  data.py  data_structures.py  process.py  report.html  results.csv  sim_diameter_stds.coco  sim_diameter_stds.py  sim_durations.coco  sim_durations.ipynb  sim_elastic.coco  sim_elastic.ipynb  sim_elastic.py  sim_input.coco  sim_input.ipynb  sim_nominal.ipynb  sim_nominal.py  sim_nominal_results.csv  sim_temperature_stds.coco  sim_temperature_stds.py  task_compile_coconut.py  task_sim.py  task_sim_diameter_stds.py  task_sim_durations.py  task_sim_elastic.py  task_sim_input.py  task_sim_nominal.py  task_sim_stds.py  task_sim_temperature_stds.py
weiner_variation/tbl/: flow_stress.tex  in_profile.tex  material_data.tex  pause_distributions.tex  process_conditions.tex  task_flow_stress.py  task_in_profile.py  task_material_data.py  task_pause_distributions.py  task_process_conditions.py
(+88 files in other folders)
