[project]
name = "weiner_variation"
version = "0"
description = "Papers and presentations for weiner_variation Conference."
authors = [{ name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" }]
license = "MIT"
requires-python = ">=3.9, <4.0"

dependencies = [
    "pyroll-core ~= 2.0",
    "pyroll-freiberg-flow-stress ~= 2.0",
    "pytask ~= 0.2.0",
    "matplotlib ~= 3.6",
    "pytask-latex ~= 0.2",
    "pandas ~= 1.5",
    "scipy ~= 1.9.0",
    "schemdraw ~= 0.15",
    "jinja2 ~= 3.1",
    "coconut",
    "tomli ~= 2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytask.ini_options]
editor_url_scheme = "pycharm"
paths = ["weiner_variation"]
show_errors_immediately = true