[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "publication-weiner-variation"
version = "1.0"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Max Weiner", email = "max.weiner@imt.tu-freiberg.de" },
]
dependencies = [
  "pytask ~=0.4",
  "pytask-latex",
  "scipy ~=1.9",
  "pandas ~=2.0",
  "matplotlib ~=3.6",
  "schemdraw ~=0.15.0",
  "jinja2 ~=3.1",
  "coconut~=3.1",
  "jupyter",
  "jupytext",
  "papermill ~=2.0",
  "tqdm ~=4.0",
  "tomli ~=2.0",
  "pyroll-core ~=2.1",
  "pyroll-basic ~=2.0",
  "pyroll-jmak-recrystallization ~=2.1"
]

[tool.hatch.env]
requires = [
    "hatch-pip-compile"
]

[tool.hatch.envs.default]
type = "pip-compile"
lock-filename = "default.lock"

[tool.hatch.build]
packages = ["weiner_variation"]

[tool.hatch.envs.default.scripts]
build = "python -m pytask"